# ChineseProj_CMake

./: .gitignore  CMakeLists.txt  README.md  data.db  main.cpp  resources.qrc
DEBUGGER/: CMakeLists.txt  main.cpp  resources.qrc
DEBUGGER/src/cpp/: property.cpp  questioncontainer.cpp  viewer.cpp  widget.cpp
DEBUGGER/src/css/: question.css  regular.css
DEBUGGER/src/headers/: property.h  questioncontainer.h  viewer.h  widget.h
DEBUGGER/src/ui/: main.ui  property.ui  questioncontainer.ui  questionview.ui
GAME/: CMakeLists.txt  main.cpp
GAME/src/cpp/: gamemodechooser.cpp  introwidget.cpp  mainwidget.cpp  managementwidget.cpp  outrowidget.cpp  rulewidget.cpp  template.cpp
GAME/src/css/: before_choose.css  regular.css
GAME/src/header/: gamemodechooser.h  introwidget.h  mainwidget.h  managementwidget.h  outrowidget.h  rulewidget.h  template.h
GAME/src/json_files/: questionlist.json
GAME/src/ui/: gamemodechooser.ui  introwidget.ui  outrowidget.ui  questionwidget.ui  rulewidget.ui
src/cpp/: introwidget.cpp  mainwidget.cpp  managementwidget.cpp  outrowidget.cpp  rulewidget.cpp  template.cpp
src/css/: after_choose.css
src/header/: introwidget.h  mainwidget.h  managementwidget.h  outrowidget.h  questionwidget.h  rulewidget.h  template.h
src/json_files/: appconfig.json  questionconfig.json  questionlist.json
src/ui/: introwidget.ui  managementwidget.ui
